--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nvd3-fork",
   "version": "2.0.1",
-  "description": "A reusable charting library written in d3.js",
-  "url": "https://github.com/novus/nvd3",
+  "description": "FORK! of NVD3, a reusable charting library written in d3.js",
+  "url": "https://github.com/apache-superset/nvd3",
   "main": "build/nv.d3.js",
   "scripts": {
     "test": "grunt",
